[package]
name = "aog-estate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fabric-contracts = { path = "../fabric-contracts" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
fabric-contracts = { path = "../fabric-contracts" }
serde_json = { workspace = true }

[lints]
workspace = true
