[package]
name = "aog-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aog-estate = { path = "../aog-estate" }
chrono = { workspace = true }
fabric-cache = { path = "../fabric-cache" }
fabric-contracts = { path = "../fabric-contracts" }
fabric-crypto = { path = "../fabric-crypto" }
fabric-identity = { path = "../fabric-identity" }
fabric-revocation = { path = "../fabric-revocation" }
fabric-token = { path = "../fabric-token" }
thiserror = { workspace = true }

[lints]
workspace = true
