[package]
name = "aog-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
redb = "2"
tokio = { workspace = true }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

[lints]
workspace = true
