[package]
name = "aog-tool-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Production AOG tool runtime: authenticated invocation, approval, OpenBao call leases, and allowlisted HTTP execution"

[dependencies]
aog-approvals = { path = "../aog-approvals" }
aog-toolproxy = { path = "../aog-toolproxy" }
fabric-contracts = { path = "../fabric-contracts" }
mai-agent = { path = "../../mai-agent" }
wsf-bridge = { path = "../wsf-bridge" }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
