[package]
name = "aog-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aog-store = { path = "../aog-store" }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
tracing = { workspace = true }
x509-parser = "0.18.1"

[lints]
workspace = true
