[package]
name = "aogd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "aogd — the minimal Loom control-plane node daemon: a RaftNode on the aog-wire transport with a thin admin API (initialize/add-learner/change-membership/write/get/leader/healthz) for the containerized multi-node conformance harness"

[[bin]]
name = "aogd"
path = "src/main.rs"

[lib]
name = "aogd"
path = "src/lib.rs"

[dependencies]
aog-store = { path = "../aog-store" }
aog-wire = { path = "../aog-wire" }
aog-apiserver = { path = "../aog-apiserver" }
wsf-bridge = { path = "../wsf-bridge" }
fabric-crypto = { path = "../fabric-crypto" }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
axum = { workspace = true }
base64 = "0.22"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
fabric-token = { path = "../fabric-token" }
fabric-contracts = { path = "../fabric-contracts" }
chrono = { workspace = true }

[lints]
workspace = true
